--- a/text3.html
+++ b/text3.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        body {
+          background-image: url('custom.jpg');
+        }
+        </style>
     <head>
         <h1>
 specialty -
 
         </h1>
-        <h2>As you heard of computers, it is a very ordinary business but my computer business 
+        <p>As you heard of computers, it is a very ordinary business but my computer business 
             is very different, when you have a computer and when the electricity shuts down your 
             all the data goes away.  So people buy a ups and it is huge and cant fit on you desk 
             and if you do you don’t have enough space to have your keyboard and mouse
-
+        </p>
+            <p1>
             So I built an idea that I will design the case that can hold an inbuilt ups and make a pc 
             in it that can connect on a pc easily and save you space a lot.
             When the space is gone you pc setup will look aesthetically pleasing and will have 
-            good management.</h2>
-        <a href="text2.html">back to the main page </a>
-
+            good management.</p1>
+        <a href="index.html">back to the main page </a>
+      
 
     </head>
 
