--- a/text3.html
+++ b/text3.html
@@ -20,6 +20,9 @@ specialty -
             in it that can connect on a pc easily and save you space a lot.
             When the space is gone you pc setup will look aesthetically pleasing and will have 
             good management.</p1>
+            <p>
+                PLEASE NOTE THE SITE IS NOT DONE PLEASE WAIT
+            </p>
         <a href="index.html">back to the main page </a>
       
 
