--- a/text7.html
+++ b/text7.html
@@ -42,6 +42,11 @@
 <p>
     total price - 1,03,951 rupees 
 </p>
+
+<a href="https://forms.office.com/r/sUerE2gU1L">buy it now </a>
+<p>
+    thankyou!!!!
+</p>
 <a href="index.html">back to main page</a>
 </head>
 
